Responsive in account page fix to work on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,3 +192,11 @@ body {
     height: 100%;
     object-fit: contain;
   }
+  @media (max-width: 575.98px) {
+    .space{
+        margin-top: 2rem;
+    }
+    p{
+        font-weight:300;
+    }
+}
